--- a/PEPRN231_FA24_TongTranLeHuy_FE/Pages/crud/UpdatePage.cshtml
+++ b/PEPRN231_FA24_TongTranLeHuy_FE/Pages/crud/UpdatePage.cshtml
@@ -1,1 +1,68 @@
-﻿
+﻿@page "/update"
+@model UI.Pages.crud.UpdatePageModel
+
+
+@{
+	ViewData["Title"] = "Update";
+	int? Role = HttpContext.Session.GetInt32("Role");
+}
+
+@if (Role == 3)
+{
+    <div class="row" style="margin: 50px 20px">
+        <h4>OilPaintingArt</h4>
+        <hr />
+        <p style="color:darkgoldenrod; font-weight: 500; font-size: x-large;">@ViewData["Message"]</p>
+        <div class="col-md-4">
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="WaterColorsPaintingId" />
+                <div class="form-group">
+                    <label asp-for="WaterColorsPainting.PaintingName" class="control-label"></label>
+                    <input asp-for="WaterColorsPainting.PaintingName" class="form-control" />
+                    <span class="text-danger">@Model.Errors.PaintingName</span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="WaterColorsPainting.PaintingDescription" class="control-label"></label>
+                    <input asp-for="WaterColorsPainting.PaintingDescription" class="form-control" />
+                    <span class="text-danger">@Model.Errors.PaintingDescription</span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="WaterColorsPainting.PaintingAuthor" class="control-label"></label>
+                    <input asp-for="WaterColorsPainting.PaintingAuthor" class="form-control" />
+                    <span class="text-danger">@Model.Errors.PaintingAuthor</span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="WaterColorsPainting.Price" class="control-label"></label>
+                    <input asp-for="WaterColorsPainting.Price" class="form-control" />
+                    <span class="text-danger">@Model.Errors.Price</span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="WaterColorsPainting.PublishYear" class="control-label"></label>
+                    <input asp-for="WaterColorsPainting.PublishYear" class="form-control" />
+                    <span class="text-danger">@Model.Errors.PublishYear</span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="WaterColorsPainting.StyleId" class="control-label"></label>
+                    <select asp-for="WaterColorsPainting.StyleId" class="form-control" asp-items="ViewBag.StyleIds"></select>
+                    <span class="text-danger">@Model.Errors.StyleId</span>
+                </div>
+                <div class="form-group" style="margin-bottom: 50px">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                    <a asp-page="HomePage" class="btn btn-outline-success">Back to List</a>
+                </div>
+            </form>
+        </div>
+    </div>
+
+	
+
+	@section Scripts {
+	@{
+			await Html.RenderPartialAsync("_ValidationScriptsPartial");
+		}
+	}
+} else
+{
+    Response.Redirect("/home");
+}
